--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Secret Hub</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Firebase Configuration and Initialization -->
+    <script defer src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
+    <script defer src="auth.js"></script>
 </head>
 <body>
     <header>
