--- a/login.html
+++ b/login.html
@@ -3,24 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Вход в систему - Secret Hub</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Login</title>
+    <!-- Firebase Configuration and Initialization -->
+    <script defer src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
+    <script defer src="auth.js"></script>
+    <link rel="stylesheet" href="styles.css"> <!-- Optional: Include your CSS file for styling -->
 </head>
 <body>
-    <div class="auth-container">
-        <div class="auth-form">
-            <h2>Вход в систему</h2>
-            <form id="login-form">
-                <input type="email" id="email" placeholder="Email" required>
-                <input type="password" id="password" placeholder="Пароль" required>
-                <button type="submit">Войти</button>
-                <p>Нет аккаунта? <a href="register.html">Зарегистрироваться</a></p>
-            </form>
-        </div>
-    </div>
+    <header>
+        <nav>
+            <div class="logo">Secret Hub</div>
+            <ul class="nav-links">
+                <li><a href="login.html">Войти</a></li>
+                <li><a href="register.html">Регистрация</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
-    <script src="script.js"></script>
+    <main>
+        <h1>Login</h1>
+        <form id="login-form">
+            <input type="email" id="email" placeholder="Email" required />
+            <input type="password" id="password" placeholder="Password" required />
+            <button type="submit">Login</button>
+        </form>
+        <p>Don't have an account? <a href="register.html">Register here</a></p>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Secret Hub. All rights reserved.</p>
+    </footer>
 </body>
 </html>
