--- a/dashboard.html
+++ b/dashboard.html
@@ -3,34 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
-    <!-- Firebase Configuration and Initialization -->
-    <script defer src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
-    <script defer src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
-    <script defer src="auth.js"></script>
-    <script defer src="script.js"></script>
+    <title>Welcome to My Site</title>
     <link rel="stylesheet" href="styles.css"> <!-- Optional: Include your CSS file for styling -->
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .footer {
+            position: fixed;
+            bottom: 10px;
+            right: 10px;
+            font-size: 12px;
+            color: gray;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="logo">Secret Hub</div>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="register.html">Register</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <h1>Dashboard</h1>
-        <button id="logout-link">Logout</button>
-        <div id="data-container"></div> <!-- Container for displaying data -->
-    </main>
-
-    <footer>
-        <p>&copy; 2024 Secret Hub. All rights reserved.</p>
-    </footer>
+    <div class="container">
+        <h1>Welcome to My Site</h1>
+        <p>Your IP Address: <span id="ip-address">Loading...</span></p>
+    </div>
+    <div class="footer">by Zanzyt. Corp.</div>
+    <script defer src="script.js"></script>
+    <script>
+        fetch('https://api64.ipify.org?format=json')
+            .then(response => response.json())
+            .then(data => {
+                document.getElementById('ip-address').textContent = data.ip;
+            })
+            .catch(error => {
+                document.getElementById('ip-address').textContent = 'Unable to fetch IP';
+            });
+    </script>
 </body>
 </html>
