--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <body>
     <div class="container">
         <h1>Welcome to My Site</h1>
-        <p>Your IP Address: <span id="ip-address">Loading...</span></p>
+        <p>Your IP Address is: <span id="ip-address">Loading...</span></p>
     </div>
     <div class="footer">by Zanzyt. Corp.</div>
     <script>
