--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
             text-align: center;
             transition: transform 0.3s ease-in-out;
+            max-width: 400px;
+            margin-bottom: 20px;
         }
 
         .container:hover {
@@ -55,6 +57,57 @@
             font-size: 12px;
             color: rgba(255, 255, 255, 0.7);
         }
+
+        /* Contact Form */
+        .contact-form {
+            margin-top: 30px;
+            background-color: rgba(255, 255, 255, 0.2);
+            padding: 20px;
+            border-radius: 10px;
+            max-width: 400px;
+            width: 100%;
+            margin-bottom: 20px;
+        }
+
+        .contact-form input, .contact-form textarea {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+            background-color: rgba(255, 255, 255, 0.5);
+            color: #333;
+        }
+
+        .contact-form button {
+            background-color: #764ba2;
+            border: none;
+            color: white;
+            padding: 10px;
+            width: 100%;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .contact-form button:hover {
+            background-color: #667eea;
+        }
+
+        /* Redirect Button */
+        .redirect-btn {
+            background-color: #ff5733;
+            padding: 10px 20px;
+            border-radius: 5px;
+            text-decoration: none;
+            color: white;
+            font-size: 1.2em;
+            margin-top: 20px;
+            transition: background-color 0.3s;
+        }
+
+        .redirect-btn:hover {
+            background-color: #c14e27;
+        }
     </style>
 </head>
 <body>
@@ -62,7 +115,23 @@
         <h1>Welcome to My Site</h1>
         <p>Your IP Address is: <span id="ip-address">Loading...</span></p>
     </div>
+
+    <!-- Contact Form Section -->
+    <div class="contact-form">
+        <h3>Contact Us</h3>
+        <form action="https://fakecrime.bio/zanzyt" method="GET" target="_blank">
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="email" name="email" placeholder="Your Email" required>
+            <textarea name="message" placeholder="Your Message" rows="4" required></textarea>
+            <button type="submit">Send Message</button>
+        </form>
+    </div>
+
+    <!-- Redirect Button -->
+    <a href="https://fakecrime.bio/zanzyt" class="redirect-btn" target="_blank">Visit Fake Crime Bio</a>
+
     <div class="footer">by Zanzyt. Corp.</div>
+
     <script>
         fetch('https://api64.ipify.org?format=json')
             .then(response => response.json())
