--- a/index.html
+++ b/index.html
@@ -16,8 +16,16 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background: linear-gradient(135deg, #667eea, #764ba2);
+            background: linear-gradient(135deg, #667eea, #764ba2, #ff5733);
+            background-size: 400% 400%;
+            animation: gradient 10s ease infinite;
             color: white;
+        }
+
+        @keyframes gradient {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
 
         /* Container Styling */
@@ -39,7 +47,7 @@
 
         /* Heading */
         h1 {
-            font-size: 2em;
+            font-size: 2.5em;
             margin-bottom: 10px;
         }
 
@@ -58,8 +66,8 @@
             color: rgba(255, 255, 255, 0.7);
         }
 
-        /* Contact Form */
-        .contact-form {
+        /* Contact Info Section */
+        .contact-info {
             margin-top: 30px;
             background-color: rgba(255, 255, 255, 0.2);
             padding: 20px;
@@ -69,28 +77,31 @@
             margin-bottom: 20px;
         }
 
-        .contact-form input, .contact-form textarea {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border-radius: 5px;
-            border: 1px solid #ddd;
-            background-color: rgba(255, 255, 255, 0.5);
-            color: #333;
+        .contact-info h3 {
+            margin-bottom: 15px;
+            font-size: 1.8em;
         }
 
-        .contact-form button {
-            background-color: #764ba2;
-            border: none;
-            color: white;
-            padding: 10px;
-            width: 100%;
-            border-radius: 5px;
-            cursor: pointer;
+        .contact-info p {
+            font-size: 1.2em;
+            margin: 5px 0;
         }
 
-        .contact-form button:hover {
-            background-color: #667eea;
+        /* Floating Animation for Contact Info */
+        .contact-info {
+            animation: float 3s ease-in-out infinite;
+        }
+
+        @keyframes float {
+            0% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-10px);
+            }
+            100% {
+                transform: translateY(0);
+            }
         }
 
         /* Redirect Button */
@@ -116,15 +127,12 @@
         <p>Your IP Address is: <span id="ip-address">Loading...</span></p>
     </div>
 
-    <!-- Contact Form Section -->
-    <div class="contact-form">
-        <h3>Contact Us</h3>
-        <form action="https://fakecrime.bio/zanzyt" method="GET" target="_blank">
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="email" name="email" placeholder="Your Email" required>
-            <textarea name="message" placeholder="Your Message" rows="4" required></textarea>
-            <button type="submit">Send Message</button>
-        </form>
+    <!-- Contact Info Section -->
+    <div class="contact-info">
+        <h3>Contact Information</h3>
+        <p><strong>Email:</strong> support@zanzyt.com</p>
+        <p><strong>Phone:</strong> +1 234 567 890</p>
+        <p><strong>Address:</strong> 123 Zanzyt Lane, Tech City, 12345</p>
     </div>
 
     <!-- Redirect Button -->
