--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to My Site</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Optional: Include your external CSS file -->
+    <link rel="stylesheet" href="styles.css"> <!-- External CSS link -->
     <style>
         /* General Styles */
         body {
@@ -20,6 +20,7 @@
             background-size: 400% 400%;
             animation: gradient 10s ease infinite;
             color: white;
+            overflow: hidden;
         }
 
         @keyframes gradient {
@@ -36,25 +37,28 @@
             border-radius: 15px;
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
             text-align: center;
-            transition: transform 0.3s ease-in-out;
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease;
             max-width: 400px;
             margin-bottom: 20px;
         }
 
         .container:hover {
             transform: scale(1.05);
+            box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
         }
 
         /* Heading */
         h1 {
             font-size: 2.5em;
             margin-bottom: 10px;
+            text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.8);
         }
 
         /* IP Address */
         p {
             font-size: 1.2em;
             font-weight: 500;
+            letter-spacing: 1px;
         }
 
         /* Footer */
@@ -64,6 +68,14 @@
             right: 10px;
             font-size: 12px;
             color: rgba(255, 255, 255, 0.7);
+            text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.7);
+            animation: float 3s ease-in-out infinite;
+        }
+
+        @keyframes float {
+            0% { transform: translateY(0); }
+            50% { transform: translateY(-10px); }
+            100% { transform: translateY(0); }
         }
 
         /* Contact Info Section */
@@ -75,6 +87,7 @@
             max-width: 500px;
             width: 100%;
             margin-bottom: 20px;
+            animation: fadeIn 1.5s ease-in-out;
         }
 
         .contact-info h3 {
@@ -87,37 +100,43 @@
             margin: 5px 0;
         }
 
-        /* Floating Animation for Contact Info */
-        .contact-info {
-            animation: float 3s ease-in-out infinite;
-        }
-
-        @keyframes float {
-            0% {
-                transform: translateY(0);
-            }
-            50% {
-                transform: translateY(-10px);
-            }
-            100% {
-                transform: translateY(0);
-            }
+        /* Fade-in animation */
+        @keyframes fadeIn {
+            0% { opacity: 0; }
+            100% { opacity: 1; }
         }
 
         /* Redirect Button */
         .redirect-btn {
             background-color: #ff5733;
-            padding: 10px 20px;
+            padding: 12px 24px;
             border-radius: 5px;
             text-decoration: none;
             color: white;
             font-size: 1.2em;
             margin-top: 20px;
-            transition: background-color 0.3s;
+            transition: background-color 0.3s, transform 0.3s ease;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
 
         .redirect-btn:hover {
             background-color: #c14e27;
+            transform: scale(1.1);
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
+        }
+
+        /* Custom Scrollbar */
+        ::-webkit-scrollbar {
+            width: 10px;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background-color: rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
+        }
+
+        ::-webkit-scrollbar-thumb:hover {
+            background-color: rgba(0, 0, 0, 0.4);
         }
     </style>
 </head>
