--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
             animation: gradient 10s ease infinite;
             color: white;
             overflow: hidden;
+            transition: background 0.3s ease;
+        }
+
+        /* Dark Mode */
+        body.dark-mode {
+            background: linear-gradient(135deg, #333, #444, #555);
+            color: #ddd;
         }
 
         @keyframes gradient {
@@ -107,7 +114,7 @@
         }
 
         /* Redirect Button */
-        .redirect-btn {
+        .redirect-btn, .social-btn {
             background-color: #ff5733;
             padding: 12px 24px;
             border-radius: 5px;
@@ -119,10 +126,52 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
 
-        .redirect-btn:hover {
+        .redirect-btn:hover, .social-btn:hover {
             background-color: #c14e27;
             transform: scale(1.1);
             box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
+        }
+
+        /* Social Media Buttons */
+        .social-btns {
+            margin-top: 20px;
+            display: flex;
+            gap: 15px;
+        }
+
+        .social-btn {
+            background-color: #7289da; /* Discord Color */
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 20px;
+            transition: transform 0.3s ease;
+        }
+
+        .social-btn:hover {
+            transform: scale(1.2);
+        }
+
+        .social-btn.github {
+            background-color: #24292f; /* GitHub Color */
+        }
+
+        /* Theme Toggle Button */
+        .theme-toggle-btn {
+            background-color: #ff5733;
+            padding: 10px 20px;
+            border-radius: 5px;
+            color: white;
+            font-size: 1.2em;
+            margin-top: 20px;
+            transition: background-color 0.3s;
+        }
+
+        .theme-toggle-btn:hover {
+            background-color: #c14e27;
         }
 
         /* Custom Scrollbar */
@@ -154,8 +203,17 @@
         <p><strong>Address:</strong> 123 Zanzyt Lane, Tech City, 12345</p>
     </div>
 
+    <!-- Social Media Buttons -->
+    <div class="social-btns">
+        <a href="https://discord.com" class="social-btn" target="_blank">D</a>
+        <a href="https://github.com" class="social-btn github" target="_blank">G</a>
+    </div>
+
     <!-- Redirect Button -->
     <a href="https://fakecrime.bio/zanzyt" class="redirect-btn" target="_blank">Visit Fake Crime Bio</a>
+
+    <!-- Theme Toggle Button -->
+    <button class="theme-toggle-btn" onclick="toggleTheme()">Toggle Theme</button>
 
     <div class="footer">by Zanzyt. Corp.</div>
 
@@ -168,6 +226,10 @@
             .catch(error => {
                 document.getElementById('ip-address').textContent = 'Unable to fetch IP';
             });
+
+        function toggleTheme() {
+            document.body.classList.toggle('dark-mode');
+        }
     </script>
 </body>
 </html>
