--- a/index.html
+++ b/index.html
@@ -26,14 +26,25 @@
         <a href="https://github.com" class="social-btn github" target="_blank">G</a>
     </div>
 
-    <!-- Redirect Button -->
+       <!-- Theme Toggle Buttons -->
+    <div class="theme-buttons">
+        <button id="light-mode-btn">
+            <img src="https://i.imgur.com/YjZXwWx.png" alt="Light Mode" class="theme-icon">
+        </button>
+
+        <button id="dark-mode-btn">
+            <img src="https://i.imgur.com/dM94Tmo.png" alt="Dark Mode" class="theme-icon">
+        </button>
+    </div>
+    
     <a href="https://fakecrime.bio/zanzyt" class="redirect-btn" target="_blank">Visit Fake Crime Bio</a>
 
     <!-- Theme Toggle Button -->
     <button class="theme-toggle-btn" onclick="toggleTheme()">Toggle Theme</button>
 
-    <div class="footer">by Zanzyt. Corp.</div>
-
+    <!-- Footer -->
+    <div class="footer">Made with ❤️</div>
+    <script src="script.js"></script>
     <script>
         fetch('https://api64.ipify.org?format=json')
             .then(response => response.json())
