--- a/index.html
+++ b/index.html
@@ -4,31 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to My Site</title>
-    <link rel="stylesheet" href="styles.css"> <!-- External CSS link -->
+    <link rel="stylesheet" href="styles.css"> <!-- External CSS -->
 </head>
 <body class="light-mode">
     <!-- Theme Toggle Buttons -->
     <div class="theme-buttons">
-        <button id="light-mode-btn">
-            <img src="https://i.imgur.com/YjZXwWx.png" alt="Light Mode" class="theme-icon">
-        </button>
-
-        <button id="dark-mode-btn">
-            <img src="https://i.imgur.com/dM94Tmo.png" alt="Dark Mode" class="theme-icon">
-        </button>
+        <div id="light-mode-btn" class="theme-toggle sun"></div>
+        <div id="dark-mode-btn" class="theme-toggle moon"></div>
     </div>
 
     <div class="container">
         <h1>Welcome to My Site</h1>
         <p>Your IP Address is: <span id="ip-address">Loading...</span></p>
-    </div>
-
-    <!-- Contact Info Section -->
-    <div class="contact-info">
-        <h3>Contact Information</h3>
-        <p><strong>Email:</strong> support@zanzyt.com</p>
-        <p><strong>Phone:</strong> +1 234 567 890</p>
-        <p><strong>Address:</strong> 123 Zanzyt Lane, Tech City, 12345</p>
     </div>
 
     <!-- Social Media Buttons -->
