--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <a href="https://fakecrime.bio/zanzyt" class="redirect-btn" target="_blank">Visit Fake Crime Bio</a>
 
     <!-- Footer -->
-    <div class="footer">Made with ❤️</div>
+    <div class="footer">Made for fun ❤️</div>
 
     <script src="script.js"></script>
 </body>
