--- a/index.html
+++ b/index.html
@@ -5,23 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to My Site</title>
     <link rel="stylesheet" href="styles.css"> <!-- External CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome Icons -->
 </head>
 <body class="light-mode">
     <!-- Theme Toggle Buttons -->
     <div class="theme-buttons">
-        <div id="light-mode-btn" class="theme-toggle sun"></div>
-        <div id="dark-mode-btn" class="theme-toggle moon"></div>
+        <div id="light-mode-btn" class="theme-toggle sun"><i class="fas fa-sun"></i></div>
+        <div id="dark-mode-btn" class="theme-toggle moon"><i class="fas fa-moon"></i></div>
     </div>
 
     <div class="container">
         <h1>Welcome to My Site</h1>
         <p>Your IP Address is: <span id="ip-address">Loading...</span></p>
+        <p>Current Time: <span id="clock">Loading...</span></p>
+        <p>Weather in <span id="city">Your City</span>: <span id="weather">Loading...</span></p>
     </div>
 
     <!-- Social Media Buttons -->
     <div class="social-btns">
-        <a href="https://discord.com" class="social-btn" target="_blank">D</a>
-        <a href="https://github.com" class="social-btn github" target="_blank">G</a>
+        <a href="https://discord.com" class="social-btn" target="_blank"><i class="fab fa-discord"></i></a>
+        <a href="https://github.com" class="social-btn github" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://twitter.com" class="social-btn twitter" target="_blank"><i class="fab fa-twitter"></i></a>
     </div>
 
     <a href="https://fakecrime.bio/zanzyt" class="redirect-btn" target="_blank">Visit Fake Crime Bio</a>
