--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <a href="https://fakecrime.bio/zanzyt" class="redirect-btn" target="_blank">Visit Fake Crime Bio</a>
 
     <!-- Footer -->
-    <div class="footer">Made for fun ❤️</div>
+    <div class="footer">Made by zanzyt corp.. </div>
 
     <script src="script.js"></script>
 </body>
