--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
     <!-- Footer -->
     <div class="footer">Made by zanzyt corp.. </div>
 
+    <!-- Cookie Consent Banner -->
+    <div id="cookies-consent" class="cookies-consent">
+        <p>We use cookies to remember your preferences. <button id="accept-cookies">Accept</button></p>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
