--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
             margin-bottom: 20px;
             border: 1px solid rgba(255, 255, 255, 0.1);
             transform-origin: center;
+            will-change: transform;
+            transform-style: preserve-3d; 
+            backface-visibility: hidden;
         }
 
         .container:hover {
